1.7.0 (02.01.2017):

* + post-save hook.
  Closes feature request #93 (post-save arbitrary command capability)
* + option in Edit/Preferences to force # pages = all if ADF if selected
  Closes feature request #54 (When changing to ADF auto select All)
* + --import command-line option. Closes Launchpad (Ubuntu) bug #312839:
  (needs command line options for Gnome integration)


1.6.0 (02.12.2016):

* Catch errors importing text layer of DjVu.
* + support for dragging files from Nautilus (or Konqueror, or anything that
  delivers URIs). Closes Launchpad (Ubuntu) bug #515854:
  (Drag and drop PDF from Nautilus should import PDF)
* + support for brackets in imported djvu hidden layer
* Store document date as offset (reverted code introduced in v1.3.9)
  Closes Debian bug #842239 (Arbitrary document metadata date chosen)
* Support ampersand (&) in filenames whilst saving images
  Closes bug #233 (Shell command injection when saving to an image format)
  Thanks to Petr Písař for the patch.
* Refactor most system() calls to use IPC::Open3 to eliminate need to escape
  special characters from shell.
* Eliminate warnings when reloading scan options with option groups.
* + option to change the pdf and djvu access and modification times to the
  metadata date
* Sort config file and ensure only currently used settings are stored


1.5.5 (23.10.2016):

* Work around bug in imagemagick causing the image depth not to be respected.
  Closes bug #231 (Saving PDF corrupts 1-bpp images imported from a PDF)
  Thanks to Petr Písař for the patch.
* Fix deleting pages by selecting thumbnails and hitting delete key.
* Fixed drag-and-drop operations broken in v1.5.2.
  Closes bug #232 (Unable to reorder pages in the thumbview)


1.5.4 (14.10.2016):

* Fixed cycle SANE handle error when using frontend other than libsane-perl.
* Fixed bug preventing # pages = all by default, even with ADF.
  Closes Debian bug #840534 (#Pages scan option always defaults to '1')


1.5.3 (12.10.2016):
