@@ -203,6 +203,7 @@ t/1171_prepend_pdf.t
 t/1172_append_pdf.t
 t/1173_prepend_pdf_with_space.t
 t/1174_prepend_pdf_with_inverted_comma.t
+t/1175_append_with_timestamp.t
 t/121_save_djvu.t
 t/122_save_djvu_with_text.t
 t/123_save_djvu_with_hocr.t
