@@ -6,6 +6,7 @@
   Closes feature request #54 (When changing to ADF auto select All)
 * + --import command-line option. Closes Launchpad (Ubuntu) bug #312839:
   (needs command line options for Gnome integration)
+* Fixed bug preventing append/prepend PDF in combination with set timestamp
 
 
 1.6.0 (02.12.2016):
